Fixed minor styling bug with Bio and Connect Containers overlapping header at full screen

--- a/src/components/Connect/Connect.module.scss
+++ b/src/components/Connect/Connect.module.scss
@@ -18,6 +18,9 @@
   @media (max-width: 769px) {
     display: none;
   }
+  @media (min-width: 1400px) {
+    top: 6rem;
+  }
 }
 
 .connectContainerInactive {
